--- a/_posts/2016-06-14-samples.html
+++ b/_posts/2016-06-14-samples.html
@@ -7,14 +7,14 @@ description: "Refer to these PWC Style websites to build on top of or to customi
     <h2>Navigation Bars</h2>
     <div class="row" id="sample-thumbnail-collection">
         <div class="col-md-6">
-            <a class="samples-thumbnail" href="samples/bigNavbarVC.html" target="_blank">
-                <img src="resources/screenshots/bigNavbarVCScreenshot.png" alt="Vertically Collapsing Big Navigation Bar Sample" />
+            <a class="samples-thumbnail" href="{{ site.baseurl }}/samples/bigNavbarVC.html" target="_blank">
+                <img src="{{ site.baseurl }}/resources/screenshots/bigNavbarVCScreenshot.png" alt="Vertically Collapsing Big Navigation Bar Sample" />
             </a>
             <h3>Vertically Collapsing Big Navbar</h3>
-            <a href="resources/downloads/bigNavbarVC.zip" class="btn pwc-btn-secondary-blue" download>Download Sample</a>
+            <a href="{{ site.baseurl }}/resources/downloads/bigNavbarVC.zip" class="btn pwc-btn-secondary-blue" download>Download Sample</a>
         </div>
         <div class="col-md-6">
-            <a class="samples-thumbnail" href="samples/smallNavbarVC.html" target="_blank">
+            <a class="samples-thumbnail" href="{{ site.baseurl }}/samples/smallNavbarVC.html" target="_blank">
                 <img src="resources/screenshots/smallNavbarVCScreenshot.png" alt="Vertically Collapsing Small Navigation Bar Sample" />
             </a>
             <h3>Vertically Collapsing Small Navbar</h3>
